[package]
name = "diam-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
opaque-ke = { version = "4.0.1", features = ["ristretto255", "std", "argon2"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
thiserror = "1.0"
dotenv = "0.15"
hex = "0.4"
base64 = "0.21"
once_cell = "1.18"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json"
]}
anyhow = "1.0.100"
blake3 = "1.8.2"
rand = "0.9.2"
tracing-subscriber = "0.3.22"
rpassword = "7.4.0"
serde_json = "1.0.149"
argon2 = "0.5.3"
sha2 = "0.10.9"
generic-array = "1.3.5"
tracing = "0.1.44"
